k8s-specifications/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment 
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      app: voting-app
  template:
    metadata:
      labels:
        name: postgres-pod
        app: voting-app
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
