k8s-specifications/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: voting-app
  template:
    metadata:
      labels:
        name: redis-pod
        app: voting-app
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
