k8s-specifications/result-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deployment
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: result-app-pod
      app: voting-app
  template:
    metadata:
      labels:
        name: result-app-pod
        app: voting-app
    spec:
      containers:
        - name: result-app
          image: kodekloud/examplevotingapp_result:v1
          ports:
            - containerPort: 80
