k8s-specifications/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: voting-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres-pod
    app: voting-app
