k8s-specifications/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: voting-app
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redis-pod
    app: voting-app
