k8s-specifications/result-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    app: voting-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: result-app-pod
    app: voting-app
