k8s-specifications/voting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    app: voting-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: voting-app-pod
    app: voting-app
