k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  labels:
    app: voting-app
spec:
  ingressClassName: nginx
  rules:
    - host: voting.webapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voting-service
                port:
                  number: 80

    - host: result.webapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
